# SyntacticCLIP

./: .gitignore  README.md  main.py  pyproject.toml
examples/: clip_finetune.py  clipbase512_using_laion2b_s34b_b79k_weights.py  clipbase512_using_laion2b_s34b_b79k_weights_GatedCLIP.py  seq2seq_transformer_tutorial.py
preprocess/: covert_openclip_to_myclipbase.py  make_dataset_colorful_original.py
src/gated_tree_clip/: __init__.py
src/gated_tree_clip/models/: __init__.py
src/gated_tree_clip/models/clip/: __init__.py  model.py
src/gated_tree_clip/models/structformer/: __init__.py  model.py
src/gated_tree_clip/nn/: __init__.py  attention.py  clip.py  dropout.py  fairseq.py  from_fairseq.py  gated_attention.py  gated_transformer.py  gated_tree_clip.py  gated_tree_transformer.py  layernorm.py  layerscale.py  meru.py  normalization.py  open_clip.py  patch_dropout.py  resnet.py  scaler.py  structformer.py  syntactic_distance_gate.py  timm.vision_transformer.py  transformer.py  vision_transformer.py
src/gated_tree_clip/nn/activation/: __init__.py  quickgelu.py
src/gated_tree_clip/nn/attention/: __init__.py  gated_multihead_attention.py  multihead_attention.py  res_attn_block.py  res_gated_attn_block.py
src/gated_tree_clip/nn/clip/: __init__.py  clip.py  syntactic_clip.py
src/gated_tree_clip/nn/clip/convert/: __init__.py  from_laion2b_s34b_b79k.py
src/gated_tree_clip/nn/criterion/: contrastive_loss.py
src/gated_tree_clip/nn/dropout/: __init__.py
src/gated_tree_clip/nn/misc/: __init__.py  syntactic_distance_gate.py
src/gated_tree_clip/nn/normalization/: __init__.py  cast_layernorm.py
src/gated_tree_clip/nn/transformer/: __init__.py  gated_text_transformer.py  gated_transformer.py  gated_vision_transformer.py  text_transformer.py  transformer.py  vision_transformer.py
src/gated_tree_clip/utils/: assert_funcs.py  distributed.py  downloader.py  lorentz.py  magicvalues.py  tools.py
src/gated_tree_clip/utils/datasets/: __init__.py  cc3m.py
tests/: test_constant.py  test_layers.py  test_models.py
